src/examples/bw_enforcer/public/app.css
html {
  height: 100%;
}
#header {
  height: 15%;
  color: rgb(51,125,245);
  text-align: center;
  border-bottom: 2px solid #a547d1;
}
#stage {
  width: 100%;
  height: 80%;
  float:left;
}
#footer {
  clear: both;
  color: rgb(51,125,245);
  font-size: medium;
  text-align: center;
  border-top: 2px solid #a547d1;
  margin-bottom: 20px;
}

body {
  -webkit-user-select: none;
  -moz-user-select: none;
  background-image: url(images/appvis-bg.png);
  height: 100%;
  margin: 0 auto;
  padding: 0;
  font-family: rotis, san-serif;
}
.node {
  -webkit-border-radius: 48px;
  -moz-border-radius: 48px;
  border-radius: 48px;
  background: #067195;
  border: 2px solid #FFF;
  box-shadow: 0 0 5px #888;
  position: absolute;
  z-index: 2;
  -webkit-backface-visibility: hidden;
}
.host {
  -webkit-border-radius: 24px;
  -moz-border-radius: 24px;
  border-radius: 24px;
  background: #3a5443;
  border: 2px solid #FFF;
  box-shadow: 0 0 2px #888;
  position: absolute;
  z-index: 2;
  -webkit-backface-visibility: hidden;
}

.node h4 {
  color: #067195;
  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
  margin: 0;
  padding: 0;
  position: absolute;
  width: 56px;
  left: 56px;
  bottom: 0;
  font-size: 14px;
}

.host h4 {
  color: #067195;
  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
  margin: 0;
  padding: 0;
  position: absolute;
  width: 30px;
  left: 30px;
  bottom: 0;
  font-size: 14px;
}
.node h5 {
  color: rgb(63,153,226);
  margin: 0;
  padding: 0;
  position:absolute;
  width:500px;
  left: 56px;
  bottom: 0;
  top: 50px;
  font-size: 14px;
}

.node.animate {
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
.node:hover {
  cursor: pointer;
}
.host:hover {
  cursor: pointer;
}
.host.dragging {
  z-index: 99;
}
.node.dragging {
  z-index: 99;
}
.segment {
  position: absolute;
  background: #bae4b3;
  z-index: 1;
  -webkit-transform-origin: 0 100%;
  -moz-transform-origin: 0 100%;
  -ms-transform-origin: 0 100%;
  border: 1px solid white;
  border-right: 0;
  -webkit-backface-visibility: hidden;
  cursor: pointer;
}
.segment .endpoint {
  position: absolute;
  top: 0px;
}

label, input { 
  display:block; 
}
input.text { 
  margin-bottom:12px; 
  width:95%; 
  padding: .4em; 
}

fieldset { 
  padding:0; 
  border:0; 
  margin-top:25px; 
}
.ui-dialog .ui-state-error { 
  padding: .3em; 
}
.validateTips { 
  border: 1px solid transparent; 
  padding: 0.3em; 
}

